Refect: Book Service, Controller, DTOs Feat: Get All Books, Get User's Books